# baby-programmer

./: .gitignore  CMakeLists.txt  make.sh
src/: CMakeLists.txt  main.cpp
src/sorting/: select.cpp  select.h  sort.h  sorting.cpp  sorting.h
